<resources>
    <string name="app_name">Calculator</string>
    <string name="age_calculator">Age Calculator</string>
    <string name="emi_calculator">EMI Calculator</string>
    <string name="percentage_calculator">Percentage Calculator</string>
    <string name="password_generator">Password Generator</string>
    <string name="tools">Tools</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="nav_item_activity_titles">
        <item>Age Calculator</item>
        <item>EMI Calculator</item>
        <item>Percentage Calculator</item>
        <item>Password Generator</item>
    </string-array>

</resources>